# iota

./: .clippy.toml  .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .typos.toml  CONTRIBUTING.md  Cargo.nix  Cargo.toml  README.md  RELEASES.md  RUST_CONVENTIONS.md  binary-build-list.json  crate-hashes.json  crates.js  deny.toml  dprint.json  graphql.config.ts  help.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  result  run-iota-test-validator.md  rustfmt.toml  search-index.js  settings.html  src-files.js  turbo.json
crates/iota-aws-orchestrator/: Cargo.toml
crates/iota-aws-orchestrator/src/: benchmark.rs  display.rs  error.rs  faults.rs  logs.rs  main.rs  measurement.rs  monitor.rs  orchestrator.rs  settings.rs  ssh.rs  testbed.rs
crates/iota-bridge/: Cargo.toml  build.rs
crates/iota-bridge-indexer/: Cargo.toml  README.md  config.yaml
crates/iota-bridge-indexer/src/: config.rs  eth_bridge_indexer.rs  iota_bridge_indexer.rs  iota_transaction_handler.rs  iota_transaction_queries.rs  lib.rs  main.rs  metrics.rs  models.rs  postgres_manager.rs  schema.rs  storage.rs
crates/iota-bridge-indexer/tests/: indexer_tests.rs
crates/iota-bridge/abi/: bridge_config.json  iota_bridge.json
crates/iota-bridge/src/: abi.rs  action_executor.rs  config.rs  crypto.rs  encoding.rs  error.rs  eth_client.rs  eth_mock_provider.rs  eth_syncer.rs  events.rs  iota_client.rs  iota_mock_client.rs  iota_syncer.rs  iota_transaction_builder.rs  lib.rs  main.rs  metered_eth_provider.rs  metrics.rs  monitor.rs  node.rs  orchestrator.rs  storage.rs  test_utils.rs  types.rs  utils.rs
crates/iota-cluster-test/: Cargo.toml
crates/iota-cluster-test/src/: cluster.rs  config.rs  faucet.rs  helper.rs  lib.rs  main.rs  test_case.rs  wallet_client.rs
crates/iota-cluster-test/tests/: local_cluster_test.rs
crates/iota-common/: Cargo.toml
crates/iota-common/src/: authority_aggregation.rs  lib.rs  logging.rs  metrics.rs
crates/iota-deepbook-indexer/: Cargo.toml
crates/iota-deepbook-indexer/src/: config.rs  error.rs  events.rs  iota_deepbook_indexer.rs  lib.rs  main.rs  metrics.rs  models.rs  postgres_manager.rs  schema.rs  server.rs  types.rs
crates/iota-edge-proxy/: Cargo.toml
crates/iota-edge-proxy/src/: config.rs  handlers.rs  lib.rs  main.rs  metrics.rs
crates/iota-genesis-common/: Cargo.toml
crates/iota-genesis-common/src/: lib.rs
crates/iota-graphql-e2e-tests/: Cargo.toml  README.md  coverage.md
crates/iota-graphql-e2e-tests/src/: lib.rs
crates/iota-graphql-e2e-tests/tests/: tests.rs
crates/iota-graphql-rpc/: Cargo.toml  README.md  schema.graphql  staging.graphql
crates/iota-graphql-rpc/docs/: examples.md
crates/iota-graphql-rpc/schema/: current_progress_schema.graphql
crates/iota-graphql-rpc/src/: commands.rs  config.rs  consistency.rs  data.rs  error.rs  examples.rs  functional_group.rs  lib.rs  main.rs  metrics.rs  mutation.rs  raw_query.rs
crates/iota-graphql-rpc/tests/: e2e_tests.rs  examples_validation_tests.rs  move_registry_e2e.rs  snapshot_tests.rs
crates/iota-indexer/: Cargo.toml  README.md  schema.md
crates/iota-indexer-alt/: Cargo.toml  generate_schema.sh  schema.patch
crates/iota-indexer-alt-framework/: Cargo.toml  generate_schema.sh  schema.patch
crates/iota-indexer-alt-framework/src/: db.rs  lib.rs  metrics.rs  schema.rs  task.rs  watermarks.rs
crates/iota-indexer-alt/src/: args.rs  benchmark.rs  bootstrap.rs  config.rs  lib.rs  main.rs  schema.rs
crates/iota-indexer-builder/: Cargo.toml
crates/iota-indexer-builder/src/: indexer_builder.rs  iota_datasource.rs  lib.rs  metrics.rs  progress.rs
crates/iota-indexer-builder/tests/: indexer_test_utils.rs  indexer_tests.rs
crates/iota-indexer/examples/: index_genesis_transaction.rs
crates/iota-indexer/src/: config.rs  db.rs  errors.rs  indexer.rs  indexer_reader.rs  lib.rs  main.rs  metrics.rs  schema.rs  system_package_task.rs  test_utils.rs  types.rs
crates/iota-indexer/tests/: external_cluster.rs  ingestion_tests.rs  json_rpc_tests.rs  read_api_tests.rs  shared_cluster.rs
crates/iota-kvstore/: Cargo.toml
crates/iota-kvstore/src/: lib.rs  main.rs
crates/iota-light-client/: Cargo.toml
crates/iota-light-client/example_config/: 532.chk  532.json  532_full.json  551.chk  551.json  551_full.json  801.chk  801.json  801_full.json  826.chk  826.json  826_full.json  checkpoints.yaml  light_client.yaml
crates/iota-light-client/src/: construct.rs  main.rs  proof.rs  utils.rs
crates/iota-light-client/tests/: README.md  check_proof.rs
crates/iota-protocol-config/: Cargo.toml
crates/iota-protocol-config/src/: lib.rs
crates/iota-proxy/: Cargo.toml  MYPKG  build.rs  iota_proxy_dockerfile
crates/iota-proxy/src/: admin.rs  config.rs  consumer.rs  handlers.rs  histogram_relay.rs  ip.rs  lib.rs  main.rs  metrics.rs  middleware.rs  peers.rs  prom_to_mimir.rs  remote_write.rs
crates/iota-synthetic-ingestion/: Cargo.toml
crates/iota-synthetic-ingestion/src/: lib.rs  main.rs  synthetic_ingestion.rs
crates/iotans-indexer/: Cargo.toml  README.md
crates/iotans-indexer/src/: indexer.rs  lib.rs  main.rs  models.rs  schema.rs
crates/iotans-indexer/tests/: checkpoint_process_tests.rs
crates/iotaop-cli/: Cargo.toml
crates/iotaop-cli/src/: command.rs  lib.rs  main.rs
crates/prometheus-closure-metric/: Cargo.toml
crates/prometheus-closure-metric/src/: lib.rs
crates/prometheus-closure-metric/tests/: closure_metric.rs
crates/shared-crypto/: Cargo.toml
crates/shared-crypto/src/: intent.rs  lib.rs
crates/simulacrum/: Cargo.toml
crates/simulacrum/data/: fullnode-template.yaml
crates/simulacrum/src/: epoch_state.rs  genesis_config.rs  lib.rs  local_ip_utils.rs  network_config.rs  node_config.rs
crates/telemetry-subscribers/: Cargo.toml
crates/telemetry-subscribers/examples/: easy-init.rs
external-crates/move/: Cargo.toml  deny.toml
iota-execution/: Cargo.toml
iota-execution/cut/: Cargo.toml
iota-execution/src/: executor.rs  latest.rs  lib.rs  lib.template.rs  tests.rs  v0.rs  v1.rs  v2.rs  verifier.rs
(+15385 files in other folders)
