[package]
name = "iota-execution"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
description = "Multiplexer to choose between multiple versions of iota and move execution crates."
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
iota-protocol-config.workspace = true
iota-types.workspace = true

move-binary-format.workspace = true
move-bytecode-verifier-meter.workspace = true
move-vm-config.workspace = true

iota-adapter-latest = { path = "latest/iota-adapter" }
iota-adapter-v0 = { path = "v0/iota-adapter" }
iota-adapter-v1 = { path = "v1/iota-adapter" }
iota-adapter-v2 = { path = "v2/iota-adapter" }
# iota-adapter-$CUT = { path = "$CUT/iota-adapter" }
iota-move-natives-latest = { path = "latest/iota-move-natives" }
iota-move-natives-v0 = { path = "v0/iota-move-natives" }
iota-move-natives-v1 = { path = "v1/iota-move-natives" }
iota-move-natives-v2 = { path = "v2/iota-move-natives" }
# iota-move-natives-$CUT = { path = "$CUT/iota-move-natives" }
iota-verifier-latest = { path = "latest/iota-verifier" }
iota-verifier-v0 = { path = "v0/iota-verifier" }
iota-verifier-v1 = { path = "v1/iota-verifier" }
iota-verifier-v2 = { path = "v2/iota-verifier" }
# iota-verifier-$CUT = { path = "$CUT/iota-verifier" }

move-abstract-interpreter-latest = { path = "../external-crates/move/crates/move-abstract-interpreter", package = "move-abstract-interpreter" }
move-abstract-interpreter-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-abstract-interpreter" }
# move-abstract-interpreter-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-abstract-interpreter" }
move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-bytecode-verifier" }
move-bytecode-verifier-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-bytecode-verifier" }
move-bytecode-verifier-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-bytecode-verifier" }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-vm-runtime" }
move-vm-runtime-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-vm-runtime" }
move-vm-runtime-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-vm-runtime" }
# move-vm-runtime-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-runtime" }

[dev-dependencies]
cargo_metadata = "0.15.4"
petgraph = "0.5.1"

[features]
default = []
tracing = [
    "iota-adapter-latest/tracing",
    "iota-adapter-v0/tracing",
    "iota-adapter-v1/tracing",
  "iota-adapter-v2/tracing",
#   "iota-adapter-$CUT/tracing",
    "move-vm-runtime-v0/tracing",
    "move-vm-runtime-v1/tracing",
    "move-vm-runtime-latest/tracing",
  "move-vm-runtime-v2/tracing",
#   "move-vm-runtime-$CUT/tracing",
    "move-vm-config/tracing",
]
