[package]
name = "iota-bridge-indexer"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
bcs.workspace = true
bin-version.workspace = true
clap.workspace = true
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
futures.workspace = true
iota-bridge.workspace = true
iota-config.workspace = true
iota-data-ingestion-core.workspace = true
iota-indexer-builder.workspace = true
iota-json-rpc-types.workspace = true
iota-metrics.workspace = true
iota-pg-temp-db.workspace = true
iota-sdk.workspace = true
iota-types.workspace = true
prometheus.workspace = true
rayon = "1.10.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum_macros.workspace = true
tap.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
diesel_migrations = "2.2.0"
hex-literal = "0.3.4"
iota-bridge = { workspace = true, features = ["test-utils"] }
iota-indexer.workspace = true
iota-indexer-builder = { workspace = true, features = ["test-utils"] }
iota-test-transaction-builder.workspace = true
test-cluster.workspace = true

[[bin]]
name = "bridge-indexer"
path = "src/main.rs"
