[package]
name = "iota-cluster-test"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait.workspace = true
clap.workspace = true
derive_more = { workspace = true, features = ["debug"] }
fastcrypto.workspace = true
futures.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
shared-crypto.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

iota-config.workspace = true
iota-core.workspace = true
iota-faucet.workspace = true
iota-graphql-rpc.workspace = true
iota-indexer.workspace = true
iota-json.workspace = true
iota-json-rpc-types.workspace = true
iota-keys.workspace = true
iota-pg-temp-db.workspace = true
iota-sdk.workspace = true
iota-swarm.workspace = true
iota-swarm-config.workspace = true
iota-test-transaction-builder.workspace = true
iota-types.workspace = true
telemetry-subscribers.workspace = true

move-core-types.workspace = true
test-cluster.workspace = true
