[package]
name = "iota-deepbook-indexer"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bcs.workspace = true
bigdecimal = { version = "0.4.5" }
bin-version.workspace = true
clap.workspace = true
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
futures.workspace = true
iota-config.workspace = true
iota-data-ingestion-core.workspace = true
iota-indexer-builder.workspace = true
iota-json-rpc-types.workspace = true
iota-metrics.workspace = true
iota-sdk.workspace = true
iota-types.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml.workspace = true
tap.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
hex-literal = "0.3.4"

[[bin]]
name = "deepbook-indexer"
path = "src/main.rs"
