[package]
name = "iota-graphql-e2e-tests"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "End to end tests for Iota GraphQL"

[lints]
workspace = true

[dev-dependencies]
datatest-stable.workspace = true
iota-graphql-rpc.workspace = true
iota-transactional-test-runner.workspace = true
telemetry-subscribers.workspace = true
tokio.workspace = true

[[test]]
name = "tests"
harness = false

[dependencies]

[target.'cfg(msim)'.dependencies]
msim.workspace = true

[features]
staging = ["iota-graphql-rpc/staging"]
