[package]
name = "iota-indexer-alt-framework"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bb8 = "0.8.5"
chrono.workspace = true
clap.workspace = true
diesel = { workspace = true, features = ["chrono"] }
diesel-async = { workspace = true, features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations.workspace = true
futures.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

iota-field-count.workspace = true
iota-storage.workspace = true
iota-types.workspace = true

[dev-dependencies]
rand.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
wiremock.workspace = true

iota-pg-temp-db.workspace = true
