[package]
name = "iota-indexer-alt"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "iota-indexer-alt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
clap.workspace = true
diesel = { workspace = true, features = ["chrono"] }
diesel-async = { workspace = true, features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations.workspace = true
futures.workspace = true
itertools.workspace = true
serde.workspace = true
telemetry-subscribers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true

iota-default-config.workspace = true
iota-field-count.workspace = true
iota-indexer-alt-framework.workspace = true
iota-protocol-config.workspace = true
iota-synthetic-ingestion = { workspace = true, optional = true }
iota-types.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
wiremock.workspace = true

[features]
default = []
benchmark = [
  "iota-synthetic-ingestion",
] # This will be used to enable benchmark mode
