[package]
name = "iota-indexer"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
rand = "0.8.5"
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bb8 = "0.8.5"
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
csv.workspace = true
diesel = { workspace = true, features = ["chrono", "serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres", "async-connection-wrapper"] }
futures.workspace = true
hex.workspace = true
indicatif.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
object_store.workspace = true
prometheus.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
strum_macros.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
tracing.workspace = true
url.workspace = true

fastcrypto = { workspace = true, features = ["copy_key"] }
iota-metrics.workspace = true
simulacrum.workspace = true
iota-config.workspace = true
iota-archival.workspace = true
iota-core.workspace = true
iota-data-ingestion-core.workspace = true
iota-json.workspace = true
iota-json-rpc.workspace = true
iota-json-rpc-api.workspace = true
iota-json-rpc-types.workspace = true
iota-open-rpc.workspace = true
iota-pg-temp-db.workspace = true
iota-sdk.workspace = true
iota-snapshot.workspace = true
iota-storage.workspace = true
iota-types.workspace = true
iota-package-resolver.workspace = true
iota-protocol-config.workspace = true
telemetry-subscribers.workspace = true
iota-rpc-api.workspace = true
iota-transaction-builder.workspace = true
iota-synthetic-ingestion.workspace = true

move-core-types.workspace = true
move-bytecode-utils.workspace = true
move-binary-format.workspace = true

diesel_migrations.workspace = true
cached.workspace = true
tokio-stream.workspace = true
dashmap.workspace = true

[dev-dependencies]
iota-keys.workspace = true
iota-move-build.workspace = true
iota-swarm-config.workspace = true
iota-test-transaction-builder.workspace = true
test-cluster.workspace = true
ntest.workspace = true
criterion.workspace = true

[[bin]]
name = "iota-indexer"
path = "src/main.rs"
