[package]
name = "iota-light-client"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "iota-light-client"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
bytes.workspace = true
clap.workspace = true
move-core-types.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
serde_yaml.workspace = true
serde_json.workspace = true
iota-types.workspace = true
iota-config.workspace = true
iota-rpc-api.workspace = true
iota-sdk.workspace = true
move-binary-format.workspace = true
iota-json-rpc-types.workspace = true
iota-package-resolver.workspace = true
url.workspace = true
reqwest.workspace = true
object_store.workspace = true
env_logger = "0.11.5"
log = "0.4.22"
