[package]
name = "iota-synthetic-ingestion"
version = "0.0.0"
authors = ["IOTA Foundation <info@iota.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
simulacrum.workspace = true
iota-test-transaction-builder.workspace = true
iota-types.workspace = true
telemetry-subscribers.workspace = true
tokio.workspace = true
tracing.workspace = true
iota-storage.workspace = true

[dev-dependencies]
iota-storage.workspace = true
tempfile.workspace = true
