[package]
name = "iotans-indexer"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
base64-url.workspace = true
bcs.workspace = true
bytes.workspace = true
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
dotenvy = "0.15"
futures.workspace = true
futures-util = "0.3.30"
iota-data-ingestion-core.workspace = true
iota-json-rpc.workspace = true
iota-metrics.workspace = true
iota-service.workspace = true
iota-storage.workspace = true
iota-types.workspace = true
move-core-types.workspace = true
notify.workspace = true
object_store.workspace = true
prometheus.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-postgres = "0.7.12"
tokio-postgres-rustls = "0.12.0"
tracing.workspace = true
url.workspace = true
webpki-roots = "0.26.3"

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
