[package]
name = "prometheus-closure-metric"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Library for a Prometheus metric that computes its value by given closure at collection time"

[dependencies]
anyhow.workspace = true
prometheus.workspace = true
protobuf.workspace = true
